- prevent images stretching if they are smaller than the thumbnail - center the images inside of the thumbnail instead of aligning to the top-left corner

--- a/src/app/components/images.component.css
+++ b/src/app/components/images.component.css
@@ -1,22 +1,28 @@
 .image-container {
-    width: 100px;
-    height: 100px;
-    border: solid #888 1px;
-    margin: 0 5px 5px 0;
-    padding: 2px;
-    display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: solid #888 1px;
+  margin: 0 5px 5px 0;
+  padding: 2px;
+  display: inline-block;
+  vertical-align: top;
+  /*text-align: center;*/
+  position: relative;
 }
 
 .image-container:hover {
-    background-color: #ade4ff;
+  background-color: #ade4ff;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  position: absolute;
+  left: 50%;
+  top: 50%;
 
-ul {
-    list-style-type: none;
+  -ms-transform: translate(-50%, -50%); /* IE 9 */
+  -webkit-transform: translate(-50%, -50%); /* Safari */
+  transform: translate(-50%, -50%);
 }
